deploy/kubernetes/overlays/production/delete-minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: aeai-os
$patch: delete
