deploy/kubernetes/overlays/production/delete-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: aeai-os
$patch: delete
