deploy/kubernetes/overlays/production/delete-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: aeai-os
$patch: delete
