deploy/kubernetes/overlays/production/delete-minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: aeai-os
$patch: delete
