deploy/kubernetes/overlays/production/delete-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: aeai-os
$patch: delete
